--- a/css/main.css
+++ b/css/main.css
@@ -460,10 +460,19 @@ img {
 }
 
 .contacts-link {
-  color: #b17f83;
+  text-decoration: none;
+  color: #d6d8db;
   font-size: 14px;
   font-weight: 400;
   line-height: 1.72;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contacts-link:hover, .contacts-link:focus,
+.contact-block:hover .contacts-link,
+.contact-block:focus .contacts-link {
+  color: #b17f83;
 }
 
 .contacts-link-type {
@@ -473,6 +482,13 @@ img {
   font-weight: 400;
   line-height: 1.72;
   font-weight: 700;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contacts-link-type:hover, .contacts-link-type:focus {
+  color: #b17f83;
+  cursor: pointer;
 }
 
 .skills-container {
@@ -517,13 +533,13 @@ img {
 
 @media screen and (min-width: 768px) {
   .about-me-container {
-    padding: 50px 40px 80px 40px;
+    padding: 60px 40px 80px 40px;
   }
 }
 
 @media screen and (min-width: 960px) {
   .about-me-container {
-    padding: 50px 50px 80px 50px;
+    padding: 60px 50px 80px 50px;
   }
 }
 
@@ -551,7 +567,7 @@ img {
 
 .info-container .name {
   font-weight: 700;
-  line-height: 2.54;
+  line-height: 2.5;
   font-size: 30px;
 }
 
@@ -573,19 +589,30 @@ img {
   }
 }
 
-.info-container .personal,
-.info-container .profession-time {
+.info-container .description {
+  color: #000000;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.72;
+}
+
+.personal {
+  color: #a8a8a8;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 2;
+  color: #b17f83;
+}
+
+.profession-time {
   color: #a8a8a8;
   font-size: 12px;
   font-weight: 400;
   line-height: 2;
 }
 
-.info-container .description {
-  color: #000000;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 1.72;
+.projects-container {
+  margin-bottom: 30px;
 }
 
 .about-me-title {
@@ -596,14 +623,29 @@ img {
   line-height: 1.08;
 }
 
-.projects-link {
+.projects-item {
+  margin-left: 20px;
+  font-weight: 700;
+}
+
+.projects-item .projects-link {
   color: #595959;
   font-size: 14px;
   font-weight: 400;
   line-height: 1.72;
+  text-decoration: none;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.tech-name {
+.projects-item .projects-link:hover, .projects-item .projects-link:focus,
+.projects-item:hover .projects-item .projects-link,
+.projects-item:focus .projects-item .projects-link {
+  color: #b17f83;
+  font-weight: 700;
+}
+
+.projects-item .tech-name {
   color: #595959;
   font-size: 14px;
   font-weight: 400;
@@ -657,15 +699,6 @@ img {
   }
 }
 
-.projects-item {
-  margin-left: 20px;
-  font-weight: 700;
-}
-
-.projects-container {
-  margin-bottom: 30px;
-}
-
 .profession-title {
   margin-top: 20px;
   margin-bottom: 5px;
@@ -677,10 +710,23 @@ img {
 
 .profession-company {
   color: #b17f83;
+  text-decoration: none;
+  -webkit-transition: -webkit-text-decoration 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-text-decoration 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: text-decoration 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: text-decoration 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-text-decoration 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.profession-company:hover, .profession-company:focus {
+  text-decoration: underline;
 }
 
 .profession-divider {
   color: #000000;
+}
+
+.profession-divider-personal {
+  color: #b17f83;
 }
 
 .profession-duties {
@@ -703,6 +749,15 @@ img {
   font-size: 16px;
   font-weight: 700;
   line-height: 1.5;
+  text-decoration: none;
+  -webkit-transition: -webkit-text-decoration 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-text-decoration 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: text-decoration 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: text-decoration 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-text-decoration 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.education-company:hover, .education-company:focus {
+  text-decoration: underline;
 }
 
 .education-duties {
