--- a/sass/layout/_about-me.scss
+++ b/sass/layout/_about-me.scss
@@ -7,11 +7,11 @@
   }
 
   @media screen and (min-width: 768px) {
-    padding: 50px 40px 80px 40px;
+    padding: 60px 40px 80px 40px;
   }
 
   @media screen and (min-width: 960px) {
-    padding: 50px 50px 80px 50px;
+    padding: 60px 50px 80px 50px;
   }
 }
 
@@ -49,14 +49,22 @@
     }
   }
 
-  .personal,
-  .profession-time {
-    @include secondaryfont();
-  }
-
   .description {
     @include mainfont($primary-black-color);
   }
+}
+
+.personal {
+  @include secondaryfont();
+  color: $accent-color;
+}
+
+.profession-time {
+  @include secondaryfont();
+}
+
+.projects-container {
+  margin-bottom: 30px;
 }
 
 .about-me-title {
@@ -64,12 +72,28 @@
   @include titlefont($primary-black-color);
 }
 
-.projects-link {
-  @include mainfont($link-color);
-}
+.projects-item {
+  margin-left: 20px;
+  font-weight: $title-font-weight;
 
-.tech-name {
-  @include mainfont($link-color);
+  .projects-link {
+    @include mainfont($link-color);
+    text-decoration: none;
+
+    @include transit(color);
+
+    &:hover,
+    &:focus,
+    .projects-item:hover &,
+    .projects-item:focus & {
+      color: $accent-color;
+      font-weight: $title-font-weight;
+    }
+  }
+
+  .tech-name {
+    @include mainfont($link-color);
+  }
 }
 
 .dots {
@@ -104,15 +128,6 @@
   }
 }
 
-.projects-item {
-  margin-left: 20px;
-  font-weight: $title-font-weight;
-}
-
-.projects-container {
-  margin-bottom: 30px;
-}
-
 .profession-title {
   margin-top: 20px;
   margin-bottom: 5px;
@@ -121,10 +136,21 @@
 
 .profession-company {
   color: $accent-color;
+  text-decoration: none;
+  @include transit(text-decoration);
+
+  &:hover,
+  &:focus {
+    text-decoration: underline;
+  }
 }
 
 .profession-divider {
   color: $primary-black-color;
+}
+
+.profession-divider-personal {
+  color: $accent-color;
 }
 
 .profession-duties {
@@ -141,6 +167,13 @@
   margin-top: 20px;
   margin-bottom: 5px;
   @include companyfont($accent-color);
+  text-decoration: none;
+  @include transit(text-decoration);
+
+  &:hover,
+  &:focus {
+    text-decoration: underline;
+  }
 }
 
 .education-duties {
